client/wfprev-war/src/main/angular/src/app/components/edit-project/project-fiscals/project-fiscals.component.scss
.fiscals-container {
  margin: 19px;

  .form-grid {
    padding: 18px;
    display: flex;
    flex-wrap: wrap;
    gap: 15px;
    justify-content: flex-start;
    font-family: var(--wf-font-family-main) !important;

    .form-item {
      flex: 1 1 calc(25% - 15px); // 4 items per row with a 15px gap

      &.quarter-width-max {
        max-width: calc(25% - 10px);
      }

      min-width: 200px;

      .error {
        color: red;
        font-size: 12px;
        margin-top: 4px;
      }

      label {
        padding: 9px;
        color: #282828;
        font-size: 14px;
        font-style: normal;
        font-weight: 400;
        line-height: normal;
      }

      input,
      select {
        font-family: var(--wf-font-family-main) !important;
        color: #282828;
        font-size: 15px;
        font-style: normal;
        font-weight: 400;
        width: 100%;
        margin: 8px 0px;
        padding: 8px 12px;
        font-size: 16px;
        border: none;
        border-bottom: 1px solid #282828;
        outline: none;
        text-overflow: ellipsis;
        box-sizing: border-box;
      }

      select {
        -webkit-appearance: none;
        background-image: url("/assets/dropdown-icon.svg");
        background-repeat: no-repeat;
        background-position: right 10px center;
        background-size: 20px 20px;
      }

      textarea {
        width: 100%;
        margin: 12px 8px;
        font-size: 14px;
        border: 1px solid #ccc;
        border-radius: 4px;
        box-sizing: border-box;
        resize: vertical;
        min-height: 80px;
        height: auto;
        line-height: 1.5;
        white-space: pre-wrap;
        word-wrap: break-word;
        font-family: var(--wf-font-family-main) !important;
      }
    }

    .fiscal-activity-name {
      flex: 1 1 calc(50% - 15px) !important;
    }

    .toggle-width {
      max-width: 220px !important;
      min-width: none !important;
    }

    .full-width {
      flex: 1 1 100%; // Span the entire row
    }

    .form-actions {
      display: flex;
      gap: 10px;
      justify-content: flex-end;

      button {
        padding: 10px 20px;
        font-size: 16px;
      }
    }

    .site-unit {
      flex: 1 1 20%;
    }

    .closet-community {
      flex: 1 1 20%;
    }

    .secondary-rational {
      flex: 1 1 20%;
    }

    .toggle-container {
      display: flex;
      align-items: center;
      gap: 10px;
      padding: 9px;
    }

    .toggle-label {
      font-size: 15px;
    }
  }

  .half-width {
    flex: 1 1 48% !important;
    /* Two items in a row with a small gap */
    min-width: 200px !important;
  }

  .cfs-width {
    max-width: 15%;
  }
}

@media (max-width: 1024px) {
  .form-grid {
    .form-item {
      flex: 1 1 calc(33.33% - 20px); // 3 items per row on medium screens
    }
  }
}

@media (max-width: 768px) {
  .form-grid {
    .form-item {
      flex: 1 1 calc(50% - 20px); // 2 items per row on small screens
    }
  }
}

@media (max-width: 480px) {
  .form-grid {
    .form-item {
      flex: 1 1 100%; // 1 item per row on very small screens
    }
  }
}

.button-primary {
  height: 43px;
  min-width: 67px;
  background-color: var(--wf-primary-color);
  color: #fff;
  padding: 12px;
  border: none;
  border-radius: 4px;
  font-size: 16px;
  cursor: pointer;
  font-family: var(--wf-font-family-main);

  &:disabled {
    background-color: #c0c0c0;
    cursor: not-allowed;
  }
}

.button-secondary {
  height: 43px;
  min-width: 67px;
  border-radius: 4px;
  background: #fff;
  color: #2d2d2d;
  font-family: var(--wf-font-family-main);
  font-size: 16px;
  padding: 12px;
  border: none;
  cursor: pointer;

  &:disabled {
    color: #fff;
    background-color: #c0c0c0;
    cursor: not-allowed;
    border: none;
  }
}

.footer {
  border: 1px solid #c7c7c7;
  background: #f2f2f2;
  width: 100vw;
  margin: -18px;
}

.button-row {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  height: 20px;

  button {
    &.primary {
      @extend .button-primary;
    }

    &.secondary {
      @extend .button-secondary;
    }
  }

  .icon {
    vertical-align: text-bottom;
    padding-right: 5px;
  }
}

.required {
  color: #ef1616;
}

.sub-section {
  flex: 1 1 100%;

  .sub-title {
    color: #000;
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
  }

  .separator {
    height: 1px;
    background-color: #c6c8cb;
    /* Grey color */
    margin: 10px -18px;
  }
}

mat-expansion-panel {
  border-bottom: 1px solid #c6c8cb;
  margin: 0px !important;
  background-color: #fff;

  ::ng-deep .mat-expansion-panel-body {
    padding: 0;
  }

  ::ng-deep .mat-expansion-indicator {
    display: none;
  }

  .project-title {
    flex-grow: 1;
    font-family: var(--wf-font-family-main) !important;
    background-color: inherit;
    font-weight: bold;
    display: flex;
    color: #000;
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    gap: 10px;
  }
}

:host ::ng-deep .mat-mdc-tab-header {
  padding-left: 0 !important;
  padding-right: 200px;
}

:host ::ng-deep .mat-mdc-tab-body-wrapper {
  overflow: visible !important;
}

:host ::ng-deep .mat-mdc-tab-body-content {
  overflow: visible !important;
}

:host ::ng-deep .mat-mdc-tab-body.mat-mdc-tab-body-active {
  overflow: visible !important;
}


.fiscal-expansion-panel {
  border-radius: 10px;
  border: 1px solid #d9d9d9;
  background: #fff;
}

.fiscal-footer {
  border-top: 1px solid #d9d9d9;

  .footer-button-row {
    display: flex;
    height: 43px;
    padding: 14px 17px 14px 23px;
    justify-content: flex-end;
    align-items: flex-start;
    gap: 14px;

    button {
      &.primary {
        @extend .button-primary;
      }

      &.secondary {
        @extend .button-secondary;
      }
    }
  }
}

.new-fiscal-button {
  padding: 12px !important;
  display: flex;
  align-items: center;
  font-size: 16px !important;
  font-weight: 400 !important;
  font-family: var(--wf-font-family-main);
}

.no-fiscals {
  color: #000;
  font-family: var(--wf-font-family-main);
  font-size: 20px;
  font-style: italic;
  font-weight: 400;
  line-height: normal;
  padding-left: 70px;
}

::ng-deep .mat-mdc-menu-panel {
  min-width: max-content;
}

::ng-deep .mat-mdc-menu-item {
  text-align: left !important;
  display: block;
}

.activities-map-container {
  display: flex;
  gap: 20px;
  width: 100%;
}

.fiscal-and-endorsement {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.activities-panel {
  flex: 0 0 69%;
}

.fiscal-map-panel {
  flex: 0 0 30%;
}

.currency-input {
  position: relative;
  display: flex;
  align-items: center;

  .currency-symbol {
    position: absolute;
    font-size: 16px;
    color: #282828;
    left: 12px;
  }

  input {
    padding-left: 24px !important;
  }
}

::ng-deep .mat-expansion-panel-content {
  border-top: 1px solid #d9d9d9;
}

.custom-tab-label {
  // to display two items in one tab header, increase the height to leave enough room.
  display: flex;
  flex-direction: column;
  align-items: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 500px !important;
  padding: 5px 10px !important;
  line-height: normal;

  .label-title {
    font-size: 18px;
    font-style: normal;
    max-width: 450px;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .label-subtitle {
    font-size: 16px;
    color: #000;
    font-style: normal;
    font-weight: 300 !important;
  }
}

:host ::ng-deep .mat-mdc-tab {
  min-height: 54px !important;
}

:host ::ng-deep .add-new-fiscal .shared-icon-button {
  position: relative;
  top: 44px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  z-index: 10;
  height: 40px !important;
}

.status-actions {
  display: flex;
  align-items: baseline;

  .status-wrapper {
    text-align: right;
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    padding-right: 45px;
    display: flex;
    align-items: center;
    gap: 5px;
  }

  .status-icon {
    width: 24px;
    height: 24px;
  }

  .status-value {
    color: #474543;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
  }
}

.header-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  gap: 10px;
}

:host ::ng-deep wfprev-textarea .textarea-label {
  padding-left: 10px;
}

